# Kueri

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  app.py  db_config.json  docker-compose.yml  index.html  install.sh  pyproject.toml  register_tools.py  run.sh  server.py
databases/: DB_README.md  _template.json  ecom_db.json  project_db.json
tools/: __init__.py  db_tools.py
